# erp_automotive

./: .gitignore  README.md  api.py  hooks.py  modules.txt  pyproject.toml
erp_automotive/: api.py  hooks.py  tasks.py
erp_automotive/config/: desktop.py  docs.py
erp_automotive/doctype/car_chooser/: car_chooser.py  test_car_chooser.py
erp_automotive/doctype/customs_card/: test_customs_card.py
erp_automotive/doctype/customs_card_receipt/: customs_card_receipt.js
erp_automotive/doctype/delivery_note_for_customs_card/: delivery_note_for_customs_card.js  delivery_note_for_customs_card.py
erp_automotive/doctype/erp_automotive_settings/: erp_automotive_settings.js  erp_automotive_settings.json  test_erp_automotive_settings.py
erp_automotive/erp_automotive/custom/: serial_no.json
erp_automotive/erp_automotive/doctype/test/: test.js  (+3 more)
erp_automotive/fixtures/: cardreceipt.json  client_script.json  custom_field.json  doctype.json  property_setter.json  server_script.json
erp_automotive/overrides/: delivery_note.py  purchase_order.py  purchase_receipt.py  sales_order.py  serial_no.py  stock_reservation_entry.py
erp_automotive/public/js/: purchase_receipt.js  sales_order_reservations.js  stock_reservation_entry.js
erp_automotive/report/stock_blanca_with_serial_no_status/: stock_blanca_with_serial_no_status.js
erp_automotive/report/test_1/: test_1.js  test_1.json
erp_automotive/translations/: ar.csv
erp_automotive/utilities/: validate.py
fixtures/: property_setter.json
overrides/: purchase_order.py  purchase_receipt.py
public/js/: purchase_receipt.js
(+31 files in other folders)
